# NLP_Text_summarizer_ML_pipeline

./: README.md  app.py  pyproject.toml  web_requirements.txt
config/: config.yaml
src/textSummarizer/components/: data_transformation.py  model_trainer.py
src/textSummarizer/entity/: __init__.py
static/css/: style.css
static/js/: script.js
templates/: index.html
